--- a/auth-portal/auth-portal/profiles/templates/profiles/user_detail.html
+++ b/auth-portal/auth-portal/profiles/templates/profiles/user_detail.html
@@ -1,24 +1,14 @@
+{% extends "base.html" %}
 {% load static %}
 {% load app_scope %}
 
+{% block secondary_css %}
+    <link rel="stylesheet" href="{% static "profiles/user_detail.css" %}">
+{% endblock %}
 
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{% static "users/user_detail.css" %}">
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"/>
-    <link rel="stylesheet"
-          href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
-          crossorigin="anonymous"/>
-    <title>{{ request.user.username }}</title>
-</head>
+{% block title %} Vasya {% endblock %}
 
+{% block content %}
 <div class="detail">
     <div class="header">User data</div>
     {% for key, value in user_data.items %}
@@ -69,22 +59,12 @@
     </div>
 </div>
 {% endfor %}
-</body>
+{% endblock %}
 
-<script
-        src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-        crossorigin="anonymous"
-></script>
-<script
-        src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"
-        integrity="sha512-dqw6X88iGgZlTsONxZK9ePmJEFrmHwpuMrsUChjAw1mRUhUITE5QU9pkcSox+ynfLhL15Sv2al5A0LVyDCmtUw=="
-        crossorigin="anonymous"
-></script>
+{% block scripts %}
 <script>
     $('.application-modal').on('click', (e) => {
         $(`#${e.currentTarget.id}-modal`).modal('show')
     })
 </script>
-</html>
-
+{% endblock %}
