--- a/auth-portal/auth-portal/profiles/templates/profiles/login.html
+++ b/auth-portal/auth-portal/profiles/templates/profiles/login.html
@@ -11,16 +11,26 @@
 {% block content %}
 
 <div class="button-box">
-    <a href="#" class="btn btn-white">Login</a>
+    {% if request.user.is_anonymous %}
+        <a href="#" class="btn btn-white">Login</a>
+    {% else %}
+        <a href="#" class="btn btn-white" onclick="document.getElementById('logout_form').submit();">LogOut</a>
+        <form id="logout_form" method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="logout" value="True" />
+            <input type="hidden" name="next" value="{{ next }}" />
+        </form>
+    {% endif %}
 </div>
 
     <p>Hello {{ request.user }}</p>
-
+{% if request.user.is_anonymous %}
 <div class="ui modal container modal-small" id="modal-window">
     <i class="close icon"></i>
     <div class="header">LogIn</div>
     <form class="ui form content"  method="POST" action="{% url 'login' %}">
         {% csrf_token %}
+        <input type="hidden" name="next" value="{{ next }}" />
         <div class="field required">
             <label>Login</label>
             <input type="text" name="username" placeholder="Enter login" />
@@ -34,6 +44,7 @@
         </div>
     </form>
 </div>
+{% endif %}
 {% endblock %}
 
 {% block scripts %}
